# python-poetry-tutorial

./: .gitignore  README.md  pyproject.toml  requirements.txt  wsgi.py
poetry_tutorial_project/: __init__.py
poetry_tutorial_project/util/: size.py
tests/: test_poetry_tutorial_project.py
